--- a/BenchmarkDotNet.Artifacts/results/Benchmark.MatchStrings-report.html
+++ b/BenchmarkDotNet.Artifacts/results/Benchmark.MatchStrings-report.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
 <meta charset='utf-8' />
-<title>Benchmark.MatchStrings-20240406-144626</title>
+<title>Benchmark.MatchStrings-20240406-235359</title>
 
 <style type="text/css">
 	table { border-collapse: collapse; display: block; width: 100%; overflow: auto; }
@@ -15,9 +15,9 @@
 <pre><code>
 BenchmarkDotNet v0.13.12, Ubuntu 22.04.2 LTS (Jammy Jellyfish) WSL
 12th Gen Intel Core i7-1260P, 1 CPU, 16 logical and 8 physical cores
-.NET SDK 7.0.117
-  [Host]     : .NET 7.0.17 (7.0.1724.12101), X64 RyuJIT AVX2
-  Job-WBMJBZ : .NET 7.0.17 (7.0.1724.12101), X64 RyuJIT AVX2
+.NET SDK 8.0.103
+  [Host]     : .NET 8.0.3 (8.0.324.11423), X64 RyuJIT AVX2
+  Job-NGOMNS : .NET 8.0.3 (8.0.324.11423), X64 RyuJIT AVX2
 </code></pre>
 <pre><code>IterationCount=100  
 </code></pre>
@@ -25,16 +25,16 @@ BenchmarkDotNet v0.13.12, Ubuntu 22.04.2 LTS (Jammy Jellyfish) WSL
 <table>
 <thead><tr><th>Method              </th><th>input         </th><th>Mean</th><th>Error</th><th>StdDev</th><th>Gen0</th><th>Gen1</th><th>Allocated</th>
 </tr>
-</thead><tbody><tr><td>UniqueOptionSetsUsingRegex</td><td>AELH(...)LCJL [2153]</td><td>7.076 &mu;s</td><td>0.0571 &mu;s</td><td>0.1665 &mu;s</td><td>1.3199</td><td>0.0534</td><td>12.18 KB</td>
-</tr><tr><td>UniqueOptionSetsUsingSpan</td><td>BIPV(...)UQZ_ [2162]</td><td>2.044 &mu;s</td><td>0.0170 &mu;s</td><td>0.0490 &mu;s</td><td>0.3052</td><td>-</td><td>2.83 KB</td>
-</tr><tr><td>UniqueOptionSetsUsingRegex</td><td>BLWA(...)ZON_ [2150]</td><td>6.730 &mu;s</td><td>0.0475 &mu;s</td><td>0.1392 &mu;s</td><td>1.1749</td><td>0.0458</td><td>10.85 KB</td>
-</tr><tr><td>UniqueOptionSetsUsingRegex</td><td>DYNU(...)FUHT [2153]</td><td>6.905 &mu;s</td><td>0.0557 &mu;s</td><td>0.1632 &mu;s</td><td>1.3199</td><td>0.0534</td><td>12.18 KB</td>
-</tr><tr><td>UniqueOptionSetsUsingSpan</td><td>G_PT(...)ZMHZ [2150]</td><td>1.819 &mu;s</td><td>0.0137 &mu;s</td><td>0.0400 &mu;s</td><td>0.1945</td><td>-</td><td>1.8 KB</td>
-</tr><tr><td>UniqueOptionSetsUsingRegex</td><td>HEE_(...)TZOS [2153]</td><td>7.066 &mu;s</td><td>0.1371 &mu;s</td><td>0.3955 &mu;s</td><td>1.3199</td><td>0.0534</td><td>12.18 KB</td>
-</tr><tr><td>UniqueOptionSetsUsingSpan</td><td>NQNC(...)_ZIJ [2156]</td><td>1.955 &mu;s</td><td>0.0213 &mu;s</td><td>0.0621 &mu;s</td><td>0.2937</td><td>-</td><td>2.7 KB</td>
-</tr><tr><td>UniqueOptionSetsUsingSpan</td><td>PRQR(...)HNVD [2189]</td><td>2.335 &mu;s</td><td>0.0224 &mu;s</td><td>0.0646 &mu;s</td><td>0.3662</td><td>0.0038</td><td>3.39 KB</td>
-</tr><tr><td>UniqueOptionSetsUsingSpan</td><td>VZNP(...)J_VN [2156]</td><td>1.975 &mu;s</td><td>0.0161 &mu;s</td><td>0.0465 &mu;s</td><td>0.2937</td><td>-</td><td>2.7 KB</td>
-</tr><tr><td>UniqueOptionSetsUsingRegex</td><td>YAPU(...)NOVQ [2171]</td><td>9.292 &mu;s</td><td>0.0887 &mu;s</td><td>0.2603 &mu;s</td><td>1.6785</td><td>0.0916</td><td>15.51 KB</td>
+</thead><tbody><tr><td>UniqueOptionSetsUsingRegex</td><td>EVLP(...)ZTAO [2132]</td><td>3.131 &mu;s</td><td>0.0611 &mu;s</td><td>0.1611 &mu;s</td><td>0.6485</td><td>0.0114</td><td>5.96 KB</td>
+</tr><tr><td>UniqueOptionSetsUsingRegex</td><td>IOVK(...)UCH_ [2159]</td><td>5.331 &mu;s</td><td>0.0495 &mu;s</td><td>0.1436 &mu;s</td><td>1.1902</td><td>0.0458</td><td>10.95 KB</td>
+</tr><tr><td>UniqueOptionSetsUsingSpan</td><td>OBDU(...)DMY_ [2174]</td><td>1.982 &mu;s</td><td>0.0221 &mu;s</td><td>0.0645 &mu;s</td><td>0.3319</td><td>-</td><td>3.08 KB</td>
+</tr><tr><td>UniqueOptionSetsUsingSpan</td><td>sydJ(...)ZYRN [2174]</td><td>1.980 &mu;s</td><td>0.0241 &mu;s</td><td>0.0686 &mu;s</td><td>0.3319</td><td>-</td><td>3.08 KB</td>
+</tr><tr><td>UniqueOptionSetsUsingRegex</td><td>sydK(...)IUKR [2177]</td><td>6.918 &mu;s</td><td>0.1290 &mu;s</td><td>0.3531 &mu;s</td><td>1.4725</td><td>0.0687</td><td>13.57 KB</td>
+</tr><tr><td>UniqueOptionSetsUsingSpan</td><td>sydP(...)YUZV [2153]</td><td>1.851 &mu;s</td><td>0.0229 &mu;s</td><td>0.0660 &mu;s</td><td>0.2861</td><td>-</td><td>2.64 KB</td>
+</tr><tr><td>UniqueOptionSetsUsingRegex</td><td>TYQI(...)CRZV [2141]</td><td>3.785 &mu;s</td><td>0.0436 &mu;s</td><td>0.1264 &mu;s</td><td>0.7858</td><td>0.0153</td><td>7.27 KB</td>
+</tr><tr><td>UniqueOptionSetsUsingSpan</td><td>URG_(...)VXVE [2141]</td><td>1.600 &mu;s</td><td>0.0150 &mu;s</td><td>0.0436 &mu;s</td><td>0.1755</td><td>-</td><td>1.62 KB</td>
+</tr><tr><td>UniqueOptionSetsUsingRegex</td><td>XGLJ(...)C_OH [2168]</td><td>6.351 &mu;s</td><td>0.0760 &mu;s</td><td>0.2181 &mu;s</td><td>1.3275</td><td>0.0534</td><td>12.26 KB</td>
+</tr><tr><td>UniqueOptionSetsUsingSpan</td><td>YDVO(...)ZPPF [2150]</td><td>1.681 &mu;s</td><td>0.0153 &mu;s</td><td>0.0433 &mu;s</td><td>0.1945</td><td>-</td><td>1.8 KB</td>
 </tr></tbody></table>
 </body>
 </html>
